--- a/index.html
+++ b/index.html
@@ -24,10 +24,24 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Projects</a></li>
           </ul>
-          <i class="fa fa-toggle-off"></i>
+          <input type="checkbox" class="switch" id="switch__dark" />
         </nav>
       </header>
-      <section></section>
+      <section class="home__introduction">
+        <div class="home__inside__container">
+          <h1>Hello.</h1>
+          <h2>I'm <span class="name">Reydel Ocon.</span></h2>
+          <p>
+            I have been interested in web development since my high school
+            years, though I stopped for a meantime because I was addicted to
+            video games and stuff, but right now I am completely dedicated.
+            Letsgo!
+          </p>
+        </div>
+        <div class="image__container">
+          <img src="./chasd.jpg" alt="picture of mine lols" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
