--- a/index.html
+++ b/index.html
@@ -30,13 +30,31 @@
       <section class="home__introduction">
         <div class="home__inside__container">
           <h1>Hello.</h1>
-          <h2>I'm <span class="name">Reydel Ocon.</span></h2>
+          <h2>
+            I'm <span class="name"><a href="#">Reydel Ocon.</a></span>
+          </h2>
           <p>
             I have been interested in web development since my high school
             years, though I stopped for a meantime because I was addicted to
             video games and stuff, but right now I am completely dedicated.
             Letsgo!
           </p>
+          <div class="icons__yow">
+            <a
+              href="https://github.com/reydelshit"
+              class="soc__icons"
+              title="Github"
+              target="_blank"
+              ><i class="fa fa-github"></i
+            ></a>
+            <a
+              href="https://facebook.com/reydelshit"
+              class="soc__icons"
+              title="Facebook"
+              target="_blank"
+              ><i class="fa fa-facebook"></i
+            ></a>
+          </div>
         </div>
       </section>
     </main>
