--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </h2>
           <p>
             I have been interested in web development since my high school
-            years, though I stopped for a meantime because I was addicted to
-            video games and stuff, but right now I am completely dedicated.
+            years, though I stopped for a while because I was addicted to video
+            games and other stuff, but right now I am completely dedicated.
             Letsgo!
           </p>
           <div class="icons__yow">
