--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             ></a>
           </div>
         </div>
+        <div class="image__container">
+          <img src="./yays.png" alt="yoww">
+          </svg>
+        </div>
       </section>
     </main>
   </body>
