--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/favicon.ico.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
-    <script defer src="./index.js"></script>
+    <script defer src="./js/index.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -21,20 +22,20 @@
           </button>
           <span class="header__title">Portfolio</span>
           <ul id="yoww" class="yow">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
           </ul>
           <input type="checkbox" class="switch" id="switch__dark" />
         </nav>
       </header>
-      <section class="home__introduction">
+      <section class="home__introduction" id="home">
         <div class="home__inside__container">
           <h1>Hello.</h1>
           <h2>
-            I'm <span class="name"><a href="#">Reydel Ocon.</a></span>
+            I'm <span class="name">Reydel Ocon</span>.
           </h2>
           <p>
-            I have been interested in web development since my high school
+            I've been interested in web development since my high school
             years, though I stopped for a while because I was addicted to video
             games and other stuff, but right now I am completely dedicated.
             Letsgo!
@@ -57,7 +58,7 @@
           </div>
         </div>
         <div class="image__container">
-          <img src="./yays.png" alt="yoww">
+          <img src="./assets/yays.png" alt="yoww">
           </svg>
         </div>
       </section>
