--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/favicon.ico.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/projects.css">
     <script defer src="./js/index.js"></script>
     <link
       rel="stylesheet"
@@ -63,5 +64,93 @@
         </div>
       </section>
     </main>
+    <div class="projects">
+      <div class="projects__container">
+        <div class="projects__header">
+          <h2>Projects</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea quae quam iusto veniam corporis earum repudiandae laboriosam illo optio voluptatibus.</p>
+        </div>
+        <div class="projects__items">
+          <div class="project__item1 items">
+            <div class="container__item">
+              <div class="item__header">
+                <h2>Reydel Ocon</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <p>HTML CSS CSS</p>
+              </div>
+              <div class="item__btn">
+                <button>Visit</button>
+                <button>Github</button>
+              </div>
+            </div>
+          </div>
+          <div class="project__item2 items">
+            <div class="container__item">
+              <div class="item__header">
+                <h2>Reydel Ocon</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <p>HTML CSS CSS</p>
+              </div>
+              <div class="item__btn">
+                <button>Visit</button>
+                <button>Github</button>
+              </div>
+            </div>
+          </div>
+          <div class="project__item3 items">
+            <div class="container__item">
+              <div class="item__header">
+                <h2>Reydel Ocon</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <p>HTML CSS CSS</p>
+              </div>
+              <div class="item__btn">
+                <button>Visit</button>
+                <button>Github</button>
+              </div>
+            </div>
+          </div>
+          <div class="project__item4 items">
+            <div class="container__item">
+              <div class="item__header">
+                <h2>Reydel Ocon</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <p>HTML CSS CSS</p>
+              </div>
+              <div class="item__btn">
+                <button>Visit</button>
+                <button>Github</button>
+              </div>
+            </div>
+          </div>
+          <div class="project__item5 items">
+            <div class="container__item">
+              <div class="item__header">
+                <h2>Reydel Ocon</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <p>HTML CSS CSS</p>
+              </div>
+              <div class="item__btn">
+                <button>Visit</button>
+                <button>Github</button>
+              </div>
+            </div>
+          </div>
+          <div class="project__item6 items">
+            <div class="container__item">
+              <div class="item__header">
+                <h2>Reydel Ocon</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <p>HTML CSS CSS</p>
+              </div>
+              <div class="item__btn">
+                <button>Visit</button>
+                <button>Github</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
