added some features lmao

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </section>
     </main>
-    <div class="projects">
+    <div class="projects" id="projects">
       <div class="projects__container">
         <div class="projects__header">
           <h2>Projects</h2>
@@ -150,6 +150,7 @@
             </div>
           </div>
         </div>
+        <span class="projects__footer">Check our all my projecs on <span><a href="#" class="projects__footer__github">Github</a></span></span>
       </div>
     </div>
   </body>
