--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
           </div>
         </div>
-        <span class="projects__footer">Check our all my projecs on <span><a href="#" class="projects__footer__github">Github</a></span></span>
+        <span class="projects__footer">Check out all my projecs on <span><a href="#" class="projects__footer__github">Github</a></span></span>
       </div>
     </div>
   </body>
