--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p>HTML CSS CSS</p>
+                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -89,7 +89,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p>HTML CSS CSS</p>
+                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -102,7 +102,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p>HTML CSS CSS</p>
+                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -115,7 +115,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p>HTML CSS CSS</p>
+                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -128,7 +128,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p>HTML CSS CSS</p>
+                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -141,7 +141,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p>HTML CSS CSS</p>
+                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -150,7 +150,7 @@
             </div>
           </div>
         </div>
-        <span class="projects__footer">Check out all my projecs on <span><a href="#" class="projects__footer__github">Github</a></span></span>
+        <span class="projects__footer">Check out all my projecs on <span><a href="https://github.com/reydelshit" target="_blank" class="projects__footer__github">Github</a></span></span>
       </div>
     </div>
   </body>
