--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#projects">Projects</a></li>
           </ul>
-          <input type="checkbox" class="switch" id="switch__dark" />
+            <input type="checkbox" class="switch" id="switch__dark" />
         </nav>
       </header>
       <section class="home__introduction" id="home">
@@ -151,6 +151,11 @@
           </div>
         </div>
         <span class="projects__footer">Check out all my projecs on <span><a href="https://github.com/reydelshit" target="_blank" class="projects__footer__github">Github</a></span></span>
+      </div>
+    </div>
+    <div class="techs">
+      <div class="techs__container">
+
       </div>
     </div>
   </body>
