--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
-                <button>Visit</button>
+                <button class="viewBTN">View</button>
                 <button>Github</button>
               </div>
             </div>
