--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="projects__container">
         <div class="projects__header">
           <h2>Projects</h2>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea quae quam iusto veniam corporis earum repudiandae laboriosam illo optio voluptatibus.</p>
+          <p>Here are some of my projects</p>
         </div>
         <div class="projects__items">
           <div class="project__item1 items">
@@ -79,7 +79,7 @@
                 <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
               </div>
               <div class="item__btn">
-                <button class="viewBTN">View</button>
+                <button>View</button>
                 <button>Github</button>
               </div>
             </div>
@@ -155,7 +155,6 @@
     </div>
     <div class="techs">
       <div class="techs__container">
-
       </div>
     </div>
   </body>
