--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <link rel="shortcut icon" href="./assets/favicon.ico.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/projects.css">
+    <link rel="stylesheet" href="./css/techs.css">
     <script defer src="./js/index.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <script src="https://kit.fontawesome.com/b010a16153.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
   </head>
   <body>
@@ -76,7 +74,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
+                <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
                 <button>View</button>
@@ -89,7 +87,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
+                <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -102,7 +100,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
+                <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -115,7 +113,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
+                <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -128,7 +126,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
+                <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -141,7 +139,7 @@
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
-                <p><span class="lang__used">HTML <span class="lang__sepator">/</span> CSS <span class="lang__sepator">/</span> JS</span></p>
+                <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
                 <button>Visit</button>
@@ -153,8 +151,48 @@
         <span class="projects__footer">Check out all my projecs on <span><a href="https://github.com/reydelshit" target="_blank" class="projects__footer__github">Github</a></span></span>
       </div>
     </div>
+    <div class="seperator"></div>
     <div class="techs">
       <div class="techs__container">
+        <div class="techs__header">
+          <h2>Techs I've worked with</h2> 
+          <p>Here are some of the technologies and I have used in my projects</p>
+        </div>
+        <div class="techss">
+          <div class="techs__skill"> 
+
+            <div class="techsBro ">
+              <i class="fab fa-html5 icons__techs icons"></i>
+              <span class="tech__skill__title">HTML / CSS / Javascript</span>
+              <span class="tech__subtitle">Fundamental Web Development</span>
+            </div>
+            <div class="techsBro ">
+              <i class="fab fa-vuejs icons__techs icons"></i>
+              <span class="tech__skill__title">Vue JS / SASS / Tailwind</span>
+              <span class="tech__subtitle">Frontend Web Development</span>
+            </div>
+            <div class="techsBro ">
+              <i class="fab fa-node-js icons__techs icons"></i>
+              <span class="tech__skill__title">Node JS</span>
+              <span class="tech__subtitle">Backend Web Development</span>
+            </div>
+            <div class="techsBro ">
+              <i class="fab fa-git-alt icons__techs icons"></i>
+              <span class="tech__skill__title">Git / Github</span>
+              <span class="tech__subtitle">Version Control</span>
+            </div>
+            <div class="techsBro ">
+              <i class="fab fa-figma icons__techs icons"></i>
+              <span class="tech__skill__title">Figma</span>
+              <span class="tech__subtitle">UI/UX Design</span>
+            </div>
+            <div class="techsBro ">
+              <i class="fab fa-js icons__techs icons"></i>
+              <span class="tech__skill__title">TypeScript</span>
+              <span class="tech__subtitle">Software Development</span>
+            </div>      
+          </div>
+        </div>
       </div>
     </div>
   </body>
