--- a/index.html
+++ b/index.html
@@ -72,30 +72,30 @@
           <div class="project__item1 items">
             <div class="container__item">
               <div class="item__header">
-                <h2>Reydel Ocon</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <h2>TIP CALCULATOR</h2>
+                <p>A tip calculator that can calculate various percentages and translate them to real money for ya to make things much easier.</p>
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
-                <button>View</button>
-                <button>Github</button>
+                <button><a href="https://tipcalculator-reydel.netlify.app/">Visit Webpage</a></button>
+                <button><a href="https://github.com/reydelshit/tip-calculator">Github</a></button>
               </div>
             </div>
           </div>
           <div class="project__item2 items">
             <div class="container__item">
               <div class="item__header">
-                <h2>Reydel Ocon</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas iusto praesentium vel perspiciatis, deserunt ipsum consectetur! Fugit distinctio tempore provident.</p>
+                <h2>TAB URL GRABBER</h2>
+                <p>An extension than can grab any links from the current tab which is useful if you wanted to save the link.</p>
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
-                <button>Visit</button>
-                <button>Github</button>
+                <button><a href="#">Visit Webpage</a></button>
+                <button><a href="#">Github</a></button>
               </div>
             </div>
           </div>
-          <div class="project__item3 items">
+          <!-- <div class="project__item3 items">
             <div class="container__item">
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
@@ -103,8 +103,8 @@
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
-                <button>Visit</button>
-                <button>Github</button>
+                <button><a href="#">Visit Webpage</a></button>
+                <button><a href="#">Github</a></button>
               </div>
             </div>
           </div>
@@ -116,12 +116,12 @@
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
-                <button>Visit</button>
-                <button>Github</button>
+                <button><a href="#">Visit Webpage</a></button>
+                <button><a href="#">Github</a></button>
               </div>
             </div>
-          </div>
-          <div class="project__item5 items">
+          </div> -->
+          <!-- <div class="project__item5 items">
             <div class="container__item">
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
@@ -129,12 +129,12 @@
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
-                <button>Visit</button>
-                <button>Github</button>
+                <button><a href="#">Visit Webpage</a></button>
+                <button><a href="#">Github</a></button>
               </div>
             </div>
-          </div>
-          <div class="project__item6 items">
+          </div> -->
+          <!-- <div class="project__item6 items">
             <div class="container__item">
               <div class="item__header">
                 <h2>Reydel Ocon</h2>
@@ -142,11 +142,11 @@
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
-                <button>Visit</button>
-                <button>Github</button>
+                <button><a href="#">Visit Webpage</a></button>
+                <button><a href="#">Github</a></button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <span class="projects__footer">Check out all my projecs on <span><a href="https://github.com/reydelshit" target="_blank" class="projects__footer__github">Github</a></span></span>
       </div>
