--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="techs__container">
         <div class="techs__header">
           <h2>Techs I've worked with</h2> 
-          <p>Here are some of the technologies and I have used in my projects</p>
+          <p>Here are some of the technologies I have used in my projects</p>
         </div>
         <div class="techss">
           <div class="techs__skill"> 
