--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       </header>
       <section class="home__introduction" id="home">
         <div class="home__inside__container">
-          <h1>Hello.</h1>
-          <h2>
+          <h1 class="pageTran hello">Hello.</h1>
+          <h2 class="pageTran myName">
             I'm <span class="name">Reydel Ocon</span>.
           </h2>
-          <p>
+          <p class="pageTran description">
             I've been interested in web development since my high school
             years, though I stopped for a while because I was addicted to video
             games and other stuff, but right now I am completely dedicated.
@@ -160,32 +160,32 @@
         </div>
         <div class="techss">
           <div class="techs__skill"> 
-            <div class="techsBro">
+            <div class="techsBro one">
               <i class="fab fa-html5 icons__techs icons"></i>
               <span class="tech__skill__title">HTML / CSS / Javascript</span>
               <span class="tech__subtitle">Fundamental Web Development</span>
             </div>
-            <div class="techsBro ">
+            <div class="techsBro two">
               <i class="fab fa-vuejs icons__techs icons"></i>
               <span class="tech__skill__title">Vue JS / SASS / Tailwind</span>
               <span class="tech__subtitle">Frontend Web Development</span>
             </div>
-            <div class="techsBro ">
+            <div class="techsBro three">
               <i class="fab fa-node-js icons__techs icons"></i>
               <span class="tech__skill__title">Node JS</span>
               <span class="tech__subtitle">Backend Web Development</span>
             </div>
-            <div class="techsBro ">
+            <div class="techsBro four">
               <i class="fab fa-git-alt icons__techs icons"></i>
               <span class="tech__skill__title">Git / Github</span>
               <span class="tech__subtitle">Version Control</span>
             </div>
-            <div class="techsBro ">
+            <div class="techsBro five">
               <i class="fab fa-figma icons__techs icons"></i>
               <span class="tech__skill__title">Figma</span>
               <span class="tech__subtitle">UI/UX Design</span>
             </div>
-            <div class="techsBro ">
+            <div class="techsBro six">
               <i class="fab fa-js icons__techs icons"></i>
               <span class="tech__skill__title">TypeScript</span>
               <span class="tech__subtitle">Software Development</span>
@@ -194,5 +194,6 @@
         </div>
       </div>
     </div>
+    <script src="./js/scrollreveal.min.js"></script>
   </body>
 </html>
