--- a/index.html
+++ b/index.html
@@ -194,6 +194,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/scrollreveal.min.js"></script>
+    <script src="./js/min/scrollreveal.min.js"></script>
   </body>
 </html>
