--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/favicon.ico.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/favicon.ico.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/projects.css">
-    <link rel="stylesheet" href="./css/techs.css">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/projects.css" />
+    <link rel="stylesheet" href="./css/techs.css" />
+    <link rel="stylesheet" href="./css/contact.css" />
     <script defer src="./js/index.js"></script>
-    <script src="https://kit.fontawesome.com/b010a16153.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b010a16153.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Portfolio</title>
   </head>
   <body>
     <main>
       <header>
         <nav class="navigation">
-            <input type="checkbox" class="switch" id="switch__dark" />
+          <input type="checkbox" class="switch" id="switch__dark" />
         </nav>
       </header>
       <section class="home__introduction" id="home">
@@ -27,10 +34,9 @@
             I'm <span class="name">Reydel Ocon</span>.
           </h2>
           <p class="pageTran description">
-            I've been interested in web development since my high school
-            years, though I stopped for a while because I was addicted to video
-            games and other stuff, but right now I am completely dedicated.
-            Letsgo!
+            I've been interested in web development since my high school years,
+            though I stopped for a while because I was addicted to video games
+            and other stuff, but right now I am completely dedicated. Letsgo!
           </p>
           <div class="icons__yow">
             <a
@@ -50,8 +56,7 @@
           </div>
         </div>
         <div class="image__container">
-          <img src="./assets/yays.png" alt="yoww">
-          </svg>
+          <!-- <img src="./assets/wea.png" alt="yoww">-->
         </div>
       </section>
     </main>
@@ -66,12 +71,24 @@
             <div class="container__item">
               <div class="item__header">
                 <h2>TIP CALCULATOR</h2>
-                <p>A tip calculator that can calculate various percentages and translate them to real money for ya to make things much easier.</p>
+                <p>
+                  A tip calculator that can calculate various percentages and
+                  translate them to real money for ya to make things much
+                  easier.
+                </p>
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
-                <button><a href="https://tipcalculator-reydel.netlify.app/">Visit Webpage</a></button>
-                <button><a href="https://github.com/reydelshit/tip-calculator">Github</a></button>
+                <button>
+                  <a href="https://tipcalculator-reydel.netlify.app/"
+                    >Visit Webpage</a
+                  >
+                </button>
+                <button>
+                  <a href="https://github.com/reydelshit/tip-calculator"
+                    >Github</a
+                  >
+                </button>
               </div>
             </div>
           </div>
@@ -79,7 +96,10 @@
             <div class="container__item">
               <div class="item__header">
                 <h2>TAB URL GRABBER</h2>
-                <p>An extension than can grab any links from the current tab which is useful if you wanted to save the link.</p>
+                <p>
+                  An extension than can grab any links from the current tab
+                  which is useful if you wanted to save the link.
+                </p>
                 <p><span class="lang__used">HTML / CSS / JS</span></p>
               </div>
               <div class="item__btn">
@@ -141,18 +161,28 @@
             </div>
           </div> -->
         </div>
-        <span class="projects__footer">Check out all my projecs on <span><a href="https://github.com/reydelshit" target="_blank" class="projects__footer__github">Github</a></span></span>
+        <span class="projects__footer"
+          >Check out all my projecs on
+          <span
+            ><a
+              href="https://github.com/reydelshit"
+              target="_blank"
+              class="projects__footer__github"
+              >Github</a
+            ></span
+          ></span
+        >
       </div>
     </div>
     <div class="seperator"></div>
     <div class="techs">
       <div class="techs__container">
         <div class="techs__header">
-          <h2>Techs I've worked with</h2> 
+          <h2>Techs I've worked with</h2>
           <p>Here are some of the technologies I have used in my projects</p>
         </div>
         <div class="techss">
-          <div class="techs__skill"> 
+          <div class="techs__skill">
             <div class="techsBro one">
               <i class="fab fa-html5 icons__techs icons"></i>
               <span class="tech__skill__title">HTML / CSS / Javascript</span>
@@ -182,7 +212,7 @@
               <i class="fab fa-js icons__techs icons"></i>
               <span class="tech__skill__title">TypeScript</span>
               <span class="tech__subtitle">Software Development</span>
-            </div>      
+            </div>
           </div>
         </div>
       </div>
@@ -195,15 +225,28 @@
           <p>Have a question? or Just want to say hi?</p>
         </div>
         <label for="name">Name</label>
-        <input type="text" placeholder="Snail Man">
+        <input type="text" placeholder="Snail Man" />
         <label for="email">Email</label>
-        <input type="email" placeholder="snail@something.com">
+        <input type="email" placeholder="snail@something.com" />
         <label for="message">Message</label>
-        <textarea name="message" placeholder="Your question, feedback or message goes here"></textarea>
+        <textarea
+          name="message"
+          placeholder="Your question, feedback or message goes here"
+        ></textarea>
         <div class="submit__btn">
           <button>Submit</button>
         </div>
-        <span class="projects__footer">or just contact me directly at <span><a href="mailto:reydel321@gmail.com" target="_blank" class="projects__footer__github">reydel@snail.com</a></span></span>
+        <span class="projects__footer"
+          >or just contact me directly at
+          <span
+            ><a
+              href="mailto:reydel321@gmail.com"
+              target="_blank"
+              class="projects__footer__github"
+              >reydel@snail.com</a
+            ></span
+          ></span
+        >
       </div>
     </div>
     <div class="seperator"></div>
